--- a/connect-four/src/assets/css/styles.css
+++ b/connect-four/src/assets/css/styles.css
@@ -1,8 +1,8 @@
-html {
+/* html {
   background-color: rgb(245, 239, 222);
   text-align: center;
   color: #50462c;
-}
+} */
 
 .container{
   display: flex;
