--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,16 +1,20 @@
 #app {
-  background-image: linear-gradient(to top, #93a5cf 0%, #e4efe9 100%);
+  background-image: linear-gradient(
+    to top,
+    #93a5cf 0%,
+    rgb(228, 237, 239) 100%
+  );
   text-align: center;
   overflow: hidden;
 }
 
-.container{
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.board{
+.board {
   margin-top: 100px;
   width: 800px;
   height: 670px;
@@ -18,15 +22,14 @@
   box-shadow: 5px 5px 10px rgba(197, 172, 115, 0.671);
 }
 
-.ball{
-  margin: 10px;
+.ball {
+  margin: 0.3rem;
   background-color: white;
-  width: 100px;
-  height: 100px;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
-  box-shadow:5px 5px 8px 3px rgb(148, 148, 148) inset;
+  box-shadow: 5px 5px 8px 3px #1b4583 inset;
 }
-
 
 /* svg */
 .svg-text {
@@ -39,26 +42,50 @@
   filter: drop-shadow(4px 4px 4px #1b4583);
 }
 
-.bg-color{
+.bg-color {
   background-color: rgb(43, 142, 255);
 }
 
-.btn-setters{
-  height: 50px;
-  margin: 10px;
+.btn-setters {
+  height: 2.5rem;
+  margin: 0.7rem;
   background-color: white;
-  width: 100px;
+  width: 6rem;
   border-radius: 50%;
 }
 
-.players-turn{ 
+.players-turn {
   font-size: 2rem;
-  background-color: rgb(43, 142, 255);
-  padding: 8px;
-  border-radius: 20px;
+}
+.players-turn-font {
+  color: #0056d8;
+  filter: drop-shadow(4px 4px 4px #ffffff);
 }
 
-.bg-header{
-  background-color: #eaf0ed;
+.bg-header {
+  background-color: #ffffff;
   border: 2px solid #eaf0ed83;
-} 
+}
+
+.timer-decoration {
+  width: 100px;
+  color: #0056d8;
+  filter: drop-shadow(4px 4px 4px #ffffff);
+}
+
+@media screen and (max-width: 413px) {
+  .ball {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .btn-setters {
+    height: 1.5rem;
+    margin: 0.7rem;
+    width: 3rem;
+  }
+}
+
+.btn-reset {
+  filter: drop-shadow(4px 4px 4px #ffffff);
+}
