--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,91 +1,95 @@
 #app {
-  background-image: linear-gradient(
-    to top,
-    #93a5cf 0%,
-    rgb(228, 237, 239) 100%
-  );
-  text-align: center;
-  overflow: hidden;
+	background-image: linear-gradient( to top, #93a5cf 0%, rgb(228, 237, 239) 100%);
+	text-align: center;
+	overflow: scroll;
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .board {
-  margin-top: 100px;
-  width: 800px;
-  height: 670px;
-  border: 5px rgb(161, 141, 96) solid;
-  box-shadow: 5px 5px 10px rgba(197, 172, 115, 0.671);
+	margin-top: 100px;
+	width: 800px;
+	height: 670px;
+	border: 5px rgb(161, 141, 96) solid;
+	box-shadow: 5px 5px 10px rgba(197, 172, 115, 0.671);
 }
 
 .ball {
-  margin: 0.3rem;
-  background-color: white;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  box-shadow: 5px 5px 8px 3px #1b4583 inset;
-}
-
-/* svg */
-.svg-text {
-  display: block;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  filter: drop-shadow(4px 4px 4px #1b4583);
+	margin: 0.5rem;
+	background-color: white;
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
+	box-shadow: 5px 5px 8px 3px #1b4583 inset;
 }
 
 .bg-color {
-  background-color: rgb(43, 142, 255);
+	background-color: rgb(43, 142, 255);
 }
 
 .btn-setters {
-  height: 2.5rem;
-  margin: 0.7rem;
-  background-color: white;
-  width: 6rem;
-  border-radius: 50%;
+	height: 2.5rem;
+	margin: 0.5rem;
+	background-color: white;
+	width: 5rem;
 }
 
-.players-turn {
-  font-size: 2rem;
-}
 .players-turn-font {
-  color: #0056d8;
-  filter: drop-shadow(4px 4px 4px #ffffff);
+	color: #0056d8;
+	filter: drop-shadow(3px 3px 3px #ffffff);
+	font-size: 2rem;
 }
 
 .bg-header {
-  background-color: #ffffff;
-  border: 2px solid #eaf0ed83;
+	background-color: #ffffff;
+	border: 2px solid #eaf0ed83;
 }
 
 .timer-decoration {
-  width: 100px;
-  color: #0056d8;
-  filter: drop-shadow(4px 4px 4px #ffffff);
+	width: 100px;
+	color: #0056d8;
+	filter: drop-shadow(3px 3px 2px #ffffff);
 }
 
-@media screen and (max-width: 413px) {
-  .ball {
-    width: 3rem;
-    height: 3rem;
-  }
-
-  .btn-setters {
-    height: 1.5rem;
-    margin: 0.7rem;
-    width: 3rem;
-  }
+@media screen and (max-width: 414px) {
+	.ball {
+		width: 4rem;
+		height: 4rem;
+	}
+	.btn-setters {
+		height: 1.5rem;
+		width: 4rem;
+	}
 }
 
-.btn-reset {
-  filter: drop-shadow(4px 4px 4px #ffffff);
+@media screen and (max-width: 320px) {
+	.ball {
+		width: 3rem;
+		height: 3rem;
+	}
+	.btn-setters {
+		height: 1.5rem;
+		width: 3rem;
+	}
+}
+
+/* svg */
+
+.svg-text {
+	display: block;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	filter: drop-shadow(4px 4px 4px #1b4583);
+}
+
+.mini-ball {
+	width: 1.5rem;
+	height: 1.5rem;
 }
