--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,6 +4,26 @@
 	overflow: scroll;
 }
 
+#overlay {
+	z-index: 1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#modalWindow {
+	z-index: 2;
+	padding: 2rem;
+	width: 80%;
+	background: #ffffff;
+}
+
 .container {
 	display: flex;
 	justify-content: center;
@@ -53,6 +73,11 @@
 	width: 100px;
 	color: #0056d8;
 	filter: drop-shadow(3px 3px 2px #ffffff);
+}
+
+.btn-winner {
+	font-size: 1.5rem;
+	filter: drop-shadow(4px 4px 4px #6394ff);
 }
 
 @media screen and (max-width: 414px) {
