--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,120 +1,125 @@
 #app {
-	background-image: linear-gradient( to top, #93a5cf 0%, rgb(228, 237, 239) 100%);
-	text-align: center;
-	overflow: scroll;
+  background-image: linear-gradient(
+    to top,
+    #93a5cf 0%,
+    rgb(228, 237, 239) 100%
+  );
+  text-align: center;
+  overflow: scroll;
 }
 
 #overlay {
-	z-index: 1;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #modalWindow {
-	z-index: 2;
-	padding: 2rem;
-	width: 80%;
-	background: #ffffff;
+  z-index: 2;
+  padding: 2rem;
+  width: 80%;
+  background: #ffffff;
 }
 
+
 .container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .board {
-	margin-top: 100px;
-	width: 800px;
-	height: 670px;
-	border: 5px rgb(161, 141, 96) solid;
-	box-shadow: 5px 5px 10px rgba(197, 172, 115, 0.671);
+  margin-top: 100px;
+  width: 800px;
+  height: 670px;
+  border: 5px rgb(161, 141, 96) solid;
+  box-shadow: 5px 5px 10px rgba(197, 172, 115, 0.671);
 }
 
 .ball {
-	margin: 0.5rem;
-	background-color: white;
-	width: 5rem;
-	height: 5rem;
-	border-radius: 50%;
-	box-shadow: 5px 5px 8px 3px #1b4583 inset;
+  margin: 0.5rem;
+  background-color: white;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  box-shadow: 5px 5px 8px 3px #1b4583 inset;
 }
 
 .bg-color {
-	background-color: rgb(43, 142, 255);
+  background-color: rgb(43, 142, 255);
 }
 
 .btn-setters {
-	height: 2.5rem;
-	margin: 0.5rem;
-	background-color: white;
-	width: 5rem;
+  height: 2.5rem;
+  margin: 0.5rem;
+  background-color: white;
+  width: 5rem;
 }
 
 .players-turn-font {
-	color: #0056d8;
-	filter: drop-shadow(3px 3px 3px #ffffff);
-	font-size: 2rem;
+  color: #0056d8;
+  filter: drop-shadow(3px 3px 3px #ffffff);
+  font-size: 2rem;
 }
 
 .bg-header {
-	background-color: #ffffff;
-	border: 2px solid #eaf0ed83;
+  background-color: #ffffff;
+  border: 2px solid #eaf0ed83;
 }
 
 .timer-decoration {
-	width: 100px;
-	color: #0056d8;
-	filter: drop-shadow(3px 3px 2px #ffffff);
+  width: 100px;
+  color: #0056d8;
+  filter: drop-shadow(3px 3px 2px #ffffff);
 }
 
 .btn-winner {
-	font-size: 1.5rem;
-	filter: drop-shadow(4px 4px 4px #6394ff);
+  font-size: 1.5rem;
+  filter: drop-shadow(4px 4px 4px #6394ff);
 }
 
 @media screen and (max-width: 414px) {
-	.ball {
-		width: 4rem;
-		height: 4rem;
-	}
-	.btn-setters {
-		height: 1.5rem;
-		width: 4rem;
-	}
+  .ball {
+    width: 4rem;
+    height: 4rem;
+  }
+  .btn-setters {
+    height: 1.5rem;
+    width: 4rem;
+  }
 }
 
 @media screen and (max-width: 320px) {
-	.ball {
-		width: 3rem;
-		height: 3rem;
-	}
-	.btn-setters {
-		height: 1.5rem;
-		width: 3rem;
-	}
+  .ball {
+    width: 3rem;
+    height: 3rem;
+  }
+  .btn-setters {
+    height: 1.5rem;
+    width: 3rem;
+  }
 }
 
 /* svg */
 
 .svg-text {
-	display: block;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	filter: drop-shadow(4px 4px 4px #1b4583);
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  filter: drop-shadow(4px 4px 4px #1b4583);
 }
 
 .mini-ball {
-	width: 1.5rem;
-	height: 1.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
